--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,8 @@ version="2.4">
 <display-name>Gupao Web Application</display-name>
 	<servlet>
 		<servlet-name>gpmvc</servlet-name>
-		<servlet-class>gupao.gpSpring.GPDispatchServlet</servlet-class>
+		<!-- <servlet-class>gupao.gpSpring.GPDispatchServlet</servlet-class> 后面那个对handlerMapping进行了优化-->
+		<servlet-class>gupao.gpSpring.v3.servlet.GPDispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
 			<param-value>application.properties</param-value>
